// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalHeader matches the Android snapshot 1`] = `
<View
  style={
    [
      {
        "borderBottomWidth": 0.5,
        "width": "100%",
      },
      {
        "backgroundColor": "#f8fafc",
        "borderBottomColor": "#e2e8f0",
        "paddingTop": 24,
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 56,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "justifyContent": "center",
          "minWidth": 48,
        }
      }
    >
      <View
        accessibilityLabel="Go back"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
            "paddingRight": 8,
            "paddingVertical": 4,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 20,
                "fontWeight": "400",
              },
              {
                "color": "#0f172a",
              },
            ]
          }
        >
          ‹
        </Text>
      </View>
    </View>
    <Text
      accessibilityLabel="Home"
      accessibilityRole="header"
      numberOfLines={1}
      style={
        [
          {
            "flex": 1,
            "fontSize": 18,
            "fontWeight": "600",
            "textAlign": "center",
          },
          {
            "color": "#0f172a",
          },
        ]
      }
    >
      Home
    </Text>
    <View
      style={
        {
          "alignItems": "flex-end",
          "justifyContent": "center",
          "minWidth": 48,
        }
      }
    />
  </View>
</View>
`;

exports[`GlobalHeader matches the iOS snapshot 1`] = `
<View
  style={
    [
      {
        "borderBottomWidth": 0.5,
        "width": "100%",
      },
      {
        "backgroundColor": "#f8fafc",
        "borderBottomColor": "#e2e8f0",
        "paddingTop": 44,
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 56,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "justifyContent": "center",
          "minWidth": 48,
        }
      }
    >
      <View
        accessibilityLabel="Go back"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
            "paddingRight": 8,
            "paddingVertical": 4,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 20,
                "fontWeight": "400",
              },
              {
                "color": "#0f172a",
              },
            ]
          }
        >
          ‹
        </Text>
      </View>
    </View>
    <Text
      accessibilityLabel="Home"
      accessibilityRole="header"
      numberOfLines={1}
      style={
        [
          {
            "flex": 1,
            "fontSize": 18,
            "fontWeight": "600",
            "textAlign": "center",
          },
          {
            "color": "#0f172a",
          },
        ]
      }
    >
      Home
    </Text>
    <View
      style={
        {
          "alignItems": "flex-end",
          "justifyContent": "center",
          "minWidth": 48,
        }
      }
    />
  </View>
</View>
`;
